moved portfolio.html

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 
             <main>
                 <!-- Sidebar section -->
-                <div id="sidebar"">
-                  <img id="sidebar-img"src=IMG_2023.JPG>
+                <div class="sidebar"">
+                  <img class="sidebar-img"src="img/IMG_2023.JPG">
                 </div>
             
                 <!-- Content section -->
