--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -62,7 +62,7 @@
 			
 			// TODO 2 - Variable declarations 
 			
-
+               positionX = 50
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -70,7 +70,8 @@
 			turn it around! 
 			*/
 			function update() {
-				moveBoxTo(2400)
+				positionX = positionX + 10
+				moveBoxTo(positionX);
 
 			};
 
@@ -80,7 +81,7 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
+				positionX = 0
 
 
 			};
