--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -62,7 +62,7 @@
 			
 			// TODO 2 - Variable declarations 
 			
-               positionX = 50
+              var positionX = 50
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
