--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -63,7 +63,7 @@
 			// TODO 2 - Variable declarations 
 			
               var positionX = 50
-			
+			  var points = 0 + 1
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
@@ -81,7 +81,9 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				positionX = 0
+				positionX = 0;
+				points
+				changeBoxText(points);
 
 
 			};
