--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -63,14 +63,15 @@
 			// TODO 2 - Variable declarations 
 			
               var positionX = 50
-			  var points = 0 + 1
+			  var points = 0
+			  var speed = 10
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
 			turn it around! 
 			*/
 			function update() {
-				positionX = positionX + 10
+				positionX = positionX + speed
 				moveBoxTo(positionX);
 
 			};
@@ -81,8 +82,9 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				positionX = 0;
-				points
+				positionX = 10;
+				points = points + 1
+				speed = speed + 3
 				changeBoxText(points);
 
 
