--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -73,8 +73,13 @@
 			function update() {
 				positionX = positionX + speed
 				moveBoxTo(positionX);
-
-			};
+				if (positionX >= boardWidth) {
+					speed = -speed
+				}
+				if (positionX >= 10) {
+					-speed >= -speed
+				}
+			}
 
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
