--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -74,10 +74,10 @@
 				positionX = positionX + speed
 				moveBoxTo(positionX);
 				if (positionX >= boardWidth) {
-					speed = -speed
+					speed *= -1
 				}
-				if (positionX >= 10) {
-					-speed >= -speed
+				if (positionX >= 0) {
+					-speed >= -1 * -1
 				}
 			}
 
