--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -76,8 +76,8 @@
 				if (positionX >= boardWidth) {
 					speed *= -1
 				}
-				if (positionX >= 0) {
-					-speed >= -1 * -1
+				else if (positionX <= 0) {
+				speed *= -1
 				}
 			}
 
